outputs/main/hsevo_bpp_online_2025-07-31_09-32-42/problem_iter7_response2.txt_stdout.txt
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/eval.py", line 9, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 10
    fullness_bonus_weight: float = 9.275537261567046e-05) -> np.ndarray:
                                                        ^
SyntaxError: unmatched ')'
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/SLOC.py", line 7, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 10
    fullness_bonus_weight: float = 0.0003327166239579813) -> np.ndarray:
                                                        ^
SyntaxError: unmatched ')'
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/cyclomatic_complexity.py", line 7, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 10
    fullness_bonus_weight: float = 0.0003327166239579813) -> np.ndarray:
                                                        ^
SyntaxError: unmatched ')'
